tests/ui/impl-trait/issue-55872-1.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/issue-55872-1.rs:12:15
   |
LL |     fn foo<T>() -> Self::E;
   |     ----------------------- definition of `foo` from trait
...
LL |     fn foo<T: Default>() -> Self::E {
   |               ^^^^^^^ impl has extra requirement `T: Default`

error[E0277]: the trait `Copy` is not implemented for `(S, T)` in `(S, T)`
  --> $DIR/issue-55872-1.rs:12:29
   |
LL |     fn foo<T: Default>() -> Self::E {
   |                             ^^^^^^^ within `(S, T)`, the trait `Copy` is not implemented for `(S, T)`, which is required by `(S, T): Copy`
   |
   = note: required because it appears within the type `(S, T)`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | impl<S: Default> Bar for S where (S, T): Copy {
   |                            ++++++++++++++++++

error[E0277]: the trait `Copy` is not implemented for `(S, T)` in `(S, T)`
  --> $DIR/issue-55872-1.rs:12:29
   |
LL |     fn foo<T: Default>() -> Self::E {
   |                             ^^^^^^^ within `(S, T)`, the trait `Copy` is not implemented for `(S, T)`, which is required by `(S, T): Copy`
   |
   = note: required because it appears within the type `(S, T)`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | impl<S: Default> Bar for S where (S, T): Copy {
   |                            ++++++++++++++++++

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0276, E0277.
For more information about an error, try `rustc --explain E0276`.
